# rezeror

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  main.py  plan.md  pyproject.toml
.github/: copilot-instructions.md
.github/skills/caveman-anastasia/: SKILL.md
src/rezeror/: __init__.py  cli.py  config.py
src/rezeror/parser/: __init__.py  chapters.py  http.py  models.py  storage.py  sync.py  toc.py
src/rezeror/web/: __init__.py  app.py  content.py  progress.py  uploads.py  wsgi.py
src/rezeror/web/static/css/: style.css
src/rezeror/web/static/js/: library.js  reader.js
src/rezeror/web/templates/: base.html  chapter_toc.html  library.html  owner_login.html  reader.html
tests/: test_reader_credit_skip.py  test_toc_parser.py  test_web_auth_and_sync.py
tests/fixtures/: toc_sample.html
